# pytrac

./: .gitignore  .gitmodules  pyproject.toml  pytrac_bindings.cpp  requirements.txt  setup.py
.github/workflows/: build.yml
examples/: process_song.py
tests/: test_pytrac.py  test_pytrac_reference.py
