[build-system]
requires = ["pybind11", "setuptools", "wheel", "pkgconfig"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrac"
version = "1.0.0"
description = "Python bindings for ATRAC1 audio codec"
authors = [{name = "PyTrac", email = "pytrac@audio.codec"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Compression",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "numpy>=1.24.4",
    "soundfile>=0.13.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytrac*"]

[tool.setuptools.package-data]
pytrac = ["*.so", "*.pyd", "*.dll"]
